Fix chart alignment on small and medium devices

--- a/assets/styles/industrysectors.css
+++ b/assets/styles/industrysectors.css
@@ -94,6 +94,9 @@
   width: 500px;
   position: relative;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .extendedChartInfo{
